# creation-os

./: .dockerignore  .editorconfig  .env.example  .envrc  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG 2.md  CHANGELOG.md  CITATION 2.cff  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cos  Dockerfile.distroless  Earthfile  GOVERNANCE.md  Justfile  LICENSE  LICENSE-SCSL-1.0.md  LICENSE.sha256  Makefile  Makefile 2  NOTICE  README.md  REPRO_CHECKSUMS.txt  ROADMAP.md  SECURITY 2.md  SECURITY.md  THREAT_MODEL.md  TODO.md  coherence_gate_batch  creation.md  creation_os_openai_stub.c  creation_os_suite_stub.c  creation_os_v10.c  (+48 more)
.cursor/: mcp.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bench/: coherence_gate_batch.c  gemm_vs_bsc.c  hv_agi_gate_neon 2.c
benchmarks/: DEFINITIVE_RESULTS.md  FULL_REPORT.md  SESSION_REPORT.md  attention_ab.sh  binding_fidelity.c  codex_comparison.json  compare_truthfulqa.py  hallucination_reduction.md  lm_eval.sh  tokenizer_throughput.c  truthfulqa_sigma.sh  vocab_scaling.c  vs_transformer.c
bindings/: README.md
bindings/android/jni/: CMakeLists.txt  spektre_surface_jni.c
cli/: cos.c
cluster/: gpu_cluster_hv.c
config/: claude_desktop_config.json  models.json  proxy.yaml  routing.json  sigma_calibration.json  sigma_thresholds.json  spec_routing.json  v51_experience.yaml
core/: Makefile  THE_MIND.c  agi_proof 2.c  agitb_binary_tests.c  alm_cli 2.c  alm_engine.c  cognitive_hook 2.c  cognitive_hook 2.h  cos_bsc 2.h  cos_bsc.h  cos_genesis_identity.h  cos_neon_hamming.h  cos_neon_retrieval.h  cos_parliament.h  creation_daemon.c  creation_os.h  epistemic_drive 2.c  facts.json  facts_10k.json  gemm_vs_bsc 2.c  llm_backend.py  mcts_reasoner 2.c  metacognition.c  proconductor 2.c  railo_soul 2.c  reasoner_eval.c  supremacy_facts_10.json  supremacy_facts_10k_plain.json  supremacy_facts_10k_sphere.json  test_kernel.sh  test_queries.txt  tri_memory.c  verifier 2.c  world_model.c  world_model.h
creation_os/: LICENSE  Makefile  Makefile.creation_os  Makefile.sk9  Makefile.sk9mm  README.md  __init__.py  creation_kernel  creation_kernel 2.c  creation_kernel 2.h  creation_os 2.h  creation_os_manifesto.h  creation_os_v1 2.c  facts 2.json  gda.cpp  gda.hpp  libsk9.dylib  living_weights.c  living_weights.h  main.c  sk9  sk9_centurion_block.h  sk9_centurion_block.mm  sk9_genesis_core.mm  sk9_python_api.h  sk9mm  spektre_attention.c  spektre_attention.h  spektre_shadow.c  spektre_shadow.h  spektre_sk8_shadow_sim.c  spektre_sk8_shadow_sim.h  steve_jobs_kernel_v1.h  steve_jobs_kernel_v1.mm  superkernel_v7.c  superkernel_v7.h  superkernel_v8.c  superkernel_v8.h  superkernel_v9_living_weights.metal  superkernel_v9_m4.c  (+3 more)
docs/: A2A_COS_TRUST.md  ADVERSARIAL_REVIEW_CHECKLIST 2.md  ADVERSARIAL_REVIEW_CHECKLIST.md  AGI_ARCHITECTURE.md  AGI_ARCHITECTURE.txt  ANALYSIS.md  BENCHMARK_PROTOCOL 2.md  CANONICAL_GIT_REPOSITORY.md  CITATION 2.bib  CLAIM_DISCIPLINE.md  COHERENCE_RECEIPTS_INDUSTRY_ALIGNMENT 2.md  COMMON_MISREADINGS.md  DOC_INDEX 2.md  DOC_INDEX.md  EXTERNAL_EVIDENCE_AND_POSITIONING.md  FEATURES_AND_STANDALONE_BUILDS.md  FULL_LOCAL_SUITE.md  FULL_STACK_FORMAL_TO_SILICON.md  GLOSSARY 2.md  GLOSSARY.md  GOOD_FIRST_ISSUES.md  HALLUCINATION_KILLER_V7 2.md  HALLUCINATION_KILLER_V7.md  HDC_VSA_ENGINEERING_SUPERIORITY.md  HYPERVECTOR_PARLIAMENT_AND_RETRIEVAL.md  KERNEL_INDEX_V71_V100.md  LANGUAGE_POLICY 2.md  LICENSE_MATRIX.md  LICENSING.md  LIVING_KERNEL_V6.md  LOCAL_OPENAI_STUB.md  MAINTAINERS.md  MCP_COS_TOOLS.md  MCP_SIGMA.md  MLX_GUIDE 2.md  MODULE_EVIDENCE_INDEX 2.md  MODULE_EVIDENCE_INDEX.md  NATIVE_COHERENCE_NEON.md  OMEGA_EVOLVE.md  PARADIGM_SNAPSHOT_FOR_DRIVE_BY_READERS.md  (+51 more)
ebpf/: sigma_shield.bpf.c
gda/: gda_consciousness_m4 2.c  gda_evolution_m4 2.c  gda_geometry_m4 2.c  gda_grounded_codebook_m4.c  gda_perception_m4.c  gda_physics_m4.c  gda_robotics_brain_m4 2.c  gda_soul_m4 2.c  gda_temporal_m4 2.c  gda_worldmodel_m4.c
hypervec/: README.md  __init__.py  manifest.json  swarm.py
include/: cos_serve.h  cos_version.h
infra/: README.md  config.cue  cos_gate.zig
integration/: gda_ghost_boot.h  gda_llama_integration.cpp  ghost-boot-CMakeLists.txt
integrations/: __init__.py  langchain_sigma.py
jepa/: jepa_bsc 2.c
mlx_creation_os/: .gitignore  ab_mcts_sigma 2.py  agi_core_v2.py  agi_ten_great_insights 2.py  agi_ten_mind_conscious_hw_insights.py  agi_ten_quantum_arch_updates 2.py  agi_utopia_architecture.py  amx_retro_infer.py  ane_hdc_resonance 2.py  anekantavada_sigma.py  anomaly_sigma.py  anti_illusion_sigma.py  anticipatory_kernel.py  anticipatory_system.py  bereshit.py  (+122 more)
python/: README.md  pyproject.toml
python/cos/: __init__.py  __main__.py  calibrate.py  cli.py  depth.py  fabric.py  hide_metric_upstream.py  latent.py  mcp_sigma_audit.py  mcp_sigma_server.py  metacog.py  moe.py  pipeline.py  probe.py  reason.py  serve.py  sigma_a2a_card.py  sigma_budget.py  sigma_calibration.py  sigma_cascade.py  sigma_debate.py  sigma_deltanet.py  sigma_distill.py  sigma_engram.py  sigma_fusion.py  sigma_gate.py  sigma_gate_complete.py  sigma_gate_core.py  sigma_gate_full.py  sigma_gate_precheck.py  sigma_gate_sae_signal.py  sigma_gate_unified.py  sigma_hide.py  sigma_icr.py  sigma_imagination.py  sigma_jepa.py  sigma_liquid_model.py  sigma_living_weights.py  sigma_precheck.py  sigma_proconductor.py  (+21 more)
python/cos/integrations/: __init__.py  autogen_sigma.py  crewai_sigma.py  decorator.py  langchain.py  langchain_sigma.py  langgraph_sigma.py  litellm.py  litellm_sigma.py  openai_sigma.py  openai_wrapper.py
python/cos/omega/: __init__.py  act.py  consolidate.py  continue_phase.py  gate.py  learn.py  loop.py  perceive.py  predict.py  prove.py  reflect.py  remember.py  safety.py  simulate.py  state.py  think.py  watchdog.py
python/creation_os/: __init__.py  langchain_adapter.py  llamaindex_adapter.py  openai_compat.py
python/tests/: test_sdk.py
sdk/python/: README.md  creation_os.py  pyproject.toml  setup.py
sdk/python/creation_os/: __init__.py
(+2797 files in other folders)
